--- a/src/index.css
+++ b/src/index.css
@@ -1262,7 +1262,7 @@ body {
   gap: 10px;
   border-bottom: 1px solid var(--color-gray-20);
   box-sizing: border-box;
-  padding: 14px 0;
+  padding: 1rem 0;
 }
 
 .cart-item:nth-last-of-type(1) {
@@ -1272,6 +1272,7 @@ body {
 .cart-item-info {
   display: flex;
   gap: 8px;
+  width: 100%;
 }
 
 .cart-item-cover {
