--- a/src/index.css
+++ b/src/index.css
@@ -662,7 +662,7 @@ body {
   height: 1.2rem;
   border: 2px solid var(--color-black-10);
   box-sizing: border-box;
-  background-image: url(public/check-nor.svg);
+  background-image: url(assets/check-nor.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 14px;
@@ -673,7 +673,7 @@ body {
   width: 1rem;
   height: 1rem;
   background-color: var(--color-black-10);
-  background-image: url(public/check-sel.svg);
+  background-image: url(assets/check-sel.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 14px;
@@ -823,7 +823,7 @@ body {
 }
 
 .drop-menu {
-  background-image: url(public/drop-menu-arrow.png);
+  background-image: url(assets/drop-menu-arrow.png);
   background-repeat: no-repeat;
   background-size: 10px 6px;
   background-position: right 10px center;
@@ -1208,7 +1208,7 @@ body {
   height: 1.2rem;
   border: 2px solid var(--color-black-10);
   box-sizing: border-box;
-  background-image: url(public/check-nor.svg);
+  background-image: url(assets/check-nor.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 12px;
@@ -1219,7 +1219,7 @@ body {
   width: 1rem;
   height: 1rem;
   background-color: var(--color-black-10);
-  background-image: url(public/check-sel.svg);
+  background-image: url(assets/check-sel.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 12px;
@@ -1442,10 +1442,10 @@ body {
   height: 16px;
   background-repeat: no-repeat;
   background-size: 16px;
-  background-image: url(public/naver_inner_icon.svg);
+  background-image: url(assets/naver_inner_icon.svg);
 }
 .btn-kakao::before {
-  background-image: url(public/kakao_inner_icon.svg);
+  background-image: url(assets/kakao_inner_icon.svg);
   background-size: 20px;
   width: 20px;
   height: 20px;
@@ -1505,7 +1505,7 @@ body {
   height: 1.2rem;
   border: 2px solid var(--color-black-10);
   box-sizing: border-box;
-  background-image: url(public/check-nor.svg);
+  background-image: url(assets/check-nor.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 12px;
@@ -1514,7 +1514,7 @@ body {
 
 .form-input-radio [type='radio']:checked {
   background-color: var(--color-black-10);
-  background-image: url(public/check-sel.svg);
+  background-image: url(assets/check-sel.svg);
 }
 
 .signup-select-box {
@@ -1530,7 +1530,7 @@ body {
   padding: 10px 0 10px 10px;
   border: 1px solid var(--color-gray-10);
   background-color: var(--color-white);
-  background-image: url(public/dropdown_icon.svg);
+  background-image: url(assets/dropdown_icon.svg);
   background-repeat: no-repeat;
   background-size: 16px;
   background-position: right 10px center;
