--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,65 @@ body {
 }
 /* Common */
 
+/* popup */
+.modal-popup {
+  position: fixed;
+  background-color: rgb(0 0 0 / 0.8);
+
+  /* 가득 채우기 */
+  inset: 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
+  background-color: #ededed;
+  width: 500px;
+  max-height: 200px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-contents {
+  padding: 20px;
+  box-sizing: border-box;
+  flex-grow: 1;
+  flex-basis: 0;
+  flex-shrink: 0;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-text {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-box {
+  display: flex;
+  width: 100%;
+}
+
+.type-modal-btn {
+  width: 100%;
+}
+
+.type-small-btn {
+  width: 120px;
+}
+
 .err-text {
   font-size: 14px;
   color: var(--color-warning);
@@ -241,8 +300,6 @@ body {
 
 .button-small {
   text-align: center;
-  max-width: 100px;
-  width: 100%;
   padding: 8px 0;
 }
 
@@ -1015,7 +1072,6 @@ body {
 
   display: flex;
   align-items: center;
-  box-shadow: inset 0 0 10px saddlebrown;
 }
 
 .coverstory-list-item {
