style : 메인 컬러 변경 및 기본 ui 수정

--- a/src/index.css
+++ b/src/index.css
@@ -91,10 +91,6 @@ select {
   box-sizing: border-box;
 }
 
-option {
-  box-shadow: inset 0 0 10px red;
-}
-
 /* Typography */
 :root {
   font-family: 'Noto Sans KR', sans-serif;
@@ -102,7 +98,7 @@ option {
 }
 
 body {
-  background-color: #ededed;
+  background-color: #f6f6f8;
   color: #222222;
 }
 
@@ -124,13 +120,19 @@ body {
   --color-black-20: #222222;
   --color-black-30: #333333;
 
-  --color-primary: #9c0b06;
+  --color-primary: #ff5102;
   --color-blue: #137190;
   --color-yellow: #e19949;
   --color-green: #0d6339;
   --color-warning: #ff0000;
 }
 /* Common */
+
+.root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
 /* popup */
 .modal-popup {
@@ -147,7 +149,7 @@ body {
 }
 
 .modal {
-  background-color: #ededed;
+  background-color: #f6f6f8;
   width: 500px;
   max-height: 200px;
   height: 100%;
@@ -188,7 +190,7 @@ body {
 }
 
 .type-small-btn {
-  width: 120px;
+  width: 100px;
 }
 
 .err-text {
@@ -227,13 +229,17 @@ body {
   align-items: center;
   justify-content: center;
   gap: 50px;
-  color: var(--color-white);
-  font-weight: 300;
+  color: var(--color-black-10);
+  font-weight: 500;
 }
 
 .logo {
   margin: 0 auto;
-  width: 110px;
+  /* width: 110px; */
+  font-size: 40px;
+  font-family: serif;
+  font-weight: bold;
+  font-family: 'Anton', sans-serif;
 }
 
 .search_icon {
@@ -246,12 +252,13 @@ body {
 }
 
 .footer {
-  background-color: #d6cbb6;
+  background-color: #c8d6ed;
   color: var(--color-white);
   font-weight: 300;
   max-height: 180px;
   height: 100%;
   font-size: 14px;
+  margin-top: auto;
 }
 
 .footer-inner {
@@ -301,6 +308,8 @@ body {
 .button-small {
   text-align: center;
   padding: 8px 0;
+  box-sizing: border-box;
+  font-size: 14px;
 }
 
 .button-large {
@@ -312,6 +321,7 @@ body {
 
 .btn-Fill {
   background-color: var(--color-black-10);
+  border: 2px solid var(--color-black-10);
   color: var(--color-white);
 }
 
@@ -327,6 +337,11 @@ body {
 .button-area {
   display: flex;
   justify-content: center;
+}
+
+.cart-button {
+  display: flex;
+  gap: 10px;
 }
 
 .button-area.with_margin {
@@ -439,11 +454,14 @@ body {
 }
 
 .main-header {
-  max-height: 450px;
-  height: 100%;
+  height: 800px;
   overflow: hidden;
   display: flex;
   align-items: center;
+}
+
+.main-cover {
+  object-fit: cover;
 }
 
 .main-coverstory {
