💄 Style: 마이페이지 주문내역 리스트 및 상세리스트 css 변경

--- a/src/index.css
+++ b/src/index.css
@@ -508,27 +508,25 @@ body {
 }
 
 .order {
-  border-bottom: solid 2px var(--color-gray-30);
   margin-bottom: 100px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .order-list {
-  margin-top: 30px;
   background-color: var(--color-white);
   width: 100%;
-  padding: 30px;
   box-sizing: border-box;
-  border-bottom: solid 2px var(--color-gray-30);
+  /* border-bottom: solid 2px var(--color-gray-30); */
 }
 
 .order-item-container {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 10px;
+  padding: 10px;
   border-bottom: solid 2px var(--color-gray-20);
+  margin-top: 20px;
+  /* display: none; */
 }
 
 .order-header {
@@ -537,12 +535,17 @@ body {
 }
 
 .order-number {
-  flex-basis: 200px;
+  flex-basis: 70px;
   color: var(--color-gray-30);
 }
 
 .order-date {
-  flex-basis: 200px;
+  flex-basis: 70px;
+  color: var(--color-gray-30);
+  margin-left: auto;
+}
+
+.date.type_gray {
   color: var(--color-gray-30);
 }
 
@@ -550,7 +553,7 @@ body {
   margin-top: 20px;
   display: flex;
   gap: 10px;
-  padding-bottom: 20px;
+  padding: 0 20px 20px 20px;
   border-bottom: solid 2px var(--color-gray-20);
 }
 
@@ -587,8 +590,13 @@ body {
 
 /* user-orderlist-arcodian-section */
 
+.accordion_wrap {
+  /* display: none; */
+}
+
 .order-detail {
   /* display: hidden; */
+  padding: 0 20px;
 }
 
 .order-detail-title {
@@ -617,6 +625,7 @@ body {
 
 .order-footer {
   margin-top: 20px;
+  padding: 0 20px;
   /* display: none; */
 }
 
@@ -647,7 +656,7 @@ body {
   padding: 10px;
   box-sizing: border-box;
   cursor: pointer;
-  /* display: hidden; */
+  border-bottom: solid 1px var(--color-gray-30);
 }
 
 /*  user, seller - wishlist  */
