--- a/src/index.css
+++ b/src/index.css
@@ -47,19 +47,6 @@ textarea {
   border-radius: 12px;
 }
 
-/* textarea::-webkit-scrollbar-track {
-  background-color: var(--color-gray-20);
-  border: 10px solid var(--color-white);
-  border-radius: 40px;
-} */
-
-/* textarea::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border: 10px solid transparent;
-  box-shadow: inset 0 0 0 20px var(--color-primary);
-  border-radius: 40px;
-} */
-
 h1,
 h2,
 h3,
@@ -124,9 +111,9 @@ body {
   --color-green: #0d6339;
   --color-warning: #ff0000;
 }
-/* Common */
 
-.root {
+/* Common */
+#root {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -449,7 +436,7 @@ body {
 .profile-type {
   font-size: 14px;
   font-weight: 500;
-  color: var(--color-white);
+  color: var(--color-primary);
   text-transform: capitalize;
   padding: 8px 12px;
   background-color: var(--color-black-10);
@@ -474,6 +461,17 @@ body {
 
 .main-title {
   margin-top: 40px;
+  padding-bottom: 8px;
+  margin-bottom: 1rem;
+
+  display: flex;
+  align-items: center;
+}
+
+.main-contents-btn-box {
+  margin-left: auto;
+  display: flex;
+  gap: 10px;
 }
 
 .main-header {
@@ -502,10 +500,8 @@ body {
 }
 
 .main-contents-title {
-  font-size: 24px;
-  padding-left: 20px;
-  padding-bottom: 10px;
-  border-bottom: solid 2px var(--color-black-20);
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .main-contents {
@@ -710,8 +706,9 @@ body {
 /*  user, seller - viewProfile  */
 
 .profile-settings {
-  padding: 0 30px 0 30px;
-  margin-top: 30px;
+  padding: 30px;
+  background-color: #fff;
+  margin-top: 0.5rem;
 }
 
 .profile-setting {
@@ -755,7 +752,6 @@ body {
   gap: 1.7rem;
   max-width: 900px;
   width: 100%;
-  margin-top: 50px;
 }
 
 .signup-layout {
@@ -1168,6 +1164,7 @@ body {
   flex-direction: row;
   gap: 4px;
   font-size: 14px;
+  margin-top: auto;
 }
 
 .card-state.new {
@@ -1544,6 +1541,7 @@ body {
 
 .contents-header-line {
   width: 900px;
+  margin-bottom: 50px;
 }
 
 .type_start {
