--- a/src/index.css
+++ b/src/index.css
@@ -1148,8 +1148,14 @@ body {
 
 .card-cover {
   aspect-ratio: 1 / 1;
-  object-fit: contain;
+  object-fit: cover;
   overflow: hidden;
+}
+
+.type-detail {
+  max-width: 660px;
+  width: 100%;
+  box-shadow: 0 0 10px saddlebrown;
 }
 
 .card-contents {
