🚧 edit : 페이지 진입시 error 해결 및 유저 마이페이지 레이아웃 수정, 현재 셀러 등록 상품 수정 작업중

--- a/src/index.css
+++ b/src/index.css
@@ -329,9 +329,20 @@ body {
   padding: 1.7rem 0;
 }
 
+.sales-button {
+  display: flex;
+  gap: 10px;
+  margin-left: auto;
+}
+
 .type-btn-cart {
   padding: 4px 10px;
   border: 1px solid var(--color-gray-30);
+}
+
+.type-sales {
+  margin-left: auto;
+  box-shadow: inset 0 0 10px saddlebrown;
 }
 
 /*  Layouts  */
@@ -1167,7 +1178,6 @@ body {
 
 .card-title {
   font-weight: 700;
-
 }
 
 .card-contents {
