--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ body {
   width: 500px;
   max-height: 200px;
   height: 100%;
-  margin-top: -200px;
+  margin-top: -70px;
 
   display: flex;
   flex-direction: column;
@@ -314,6 +314,11 @@ body {
   width: 100%;
 }
 
+.type-btn-gap {
+  gap: 10px;
+  justify-content: center;
+}
+
 .type-modal-btn {
   width: 100%;
 }
@@ -342,7 +347,10 @@ body {
 
 .type-sales {
   margin-left: auto;
-  box-shadow: inset 0 0 10px saddlebrown;
+}
+
+.type-sales-btn {
+  width: 400px;
 }
 
 /*  Layouts  */
@@ -352,7 +360,6 @@ body {
   gap: 20px;
   row-gap: 60px;
   grid-template-columns: repeat(4, 1fr);
-  margin-top: 30px;
 }
 
 .l_wrapper {
@@ -944,6 +951,7 @@ body {
   display: flex;
   align-items: center;
   margin-left: 2px;
+  margin-bottom: 30px;
 }
 
 .section-count {
@@ -1143,16 +1151,6 @@ body {
   line-height: 1.5rem;
 }
 
-/* @@@@@@@@@@@@@@@@@@@@ PRODUCT @@@@@@@@@@@@@@@@@@@ */
-
-.grid {
-  display: grid;
-  gap: 30px;
-  row-gap: 60px;
-  grid-template-columns: repeat(4, 1fr);
-  margin-top: 30px;
-}
-
 /* @@@@@@@@@@@@@@@@@@@@ 마켓 목록 & 매거진 목록 @@@@@@@@@@@@@@@@@@@@ */
 
 .card {
@@ -1170,6 +1168,9 @@ body {
 .card-cover {
   object-fit: contain;
   overflow: hidden;
+  background-color: var(--color-gray-20);
+  width: 200px;
+  height: 200px;
 }
 
 .card-cover-src {
@@ -1301,6 +1302,7 @@ body {
   font-size: 26px;
   font-weight: 900;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .main-contents {
