--- a/src/index.css
+++ b/src/index.css
@@ -1032,14 +1032,26 @@ body {
   align-items: center;
 }
 
+.wishlist-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  cursor: pointer;
+}
+
 .wishlist-icon {
-  width: 27px;
+  width: 28px;
   height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .wishlist-count {
   color: var(--color-gray-30);
   font-weight: var(--fw-regular);
+  
 }
 
 .overview-contents {
