--- a/src/index.css
+++ b/src/index.css
@@ -120,10 +120,24 @@ body {
   flex-direction: column;
 }
 
+.loading-box {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading {
+  width: 300px;
+  height: 300px;
+}
+
 /* popup */
 .modal-popup {
   position: fixed;
   background-color: rgb(0 0 0 / 0.8);
+  z-index: 1;
 
   inset: 0;
 
@@ -592,6 +606,7 @@ body {
 
 .order-main {
   display: flex;
+  width: 100%;
   gap: 10px;
   padding: 10px 20px;
   border-bottom: solid 1px var(--color-gray-20);
@@ -636,7 +651,7 @@ body {
 
 .accordion-contents {
   background-color: var(--color-white);
-  display: none;
+  /* display: none; */
 }
 
 .accordion-item.active .accordion-contents {
@@ -650,7 +665,7 @@ body {
 .order-detail-title {
   color: var(--color-gray-30);
   padding: 20px 0;
-  border-bottom: solid 2px var(--color-gray-20);
+  border-bottom: solid 1px var(--color-gray-20);
 }
 
 .order-detail-list {
@@ -659,7 +674,7 @@ body {
   flex-direction: column;
   gap: 20px;
   padding-bottom: 20px;
-  border-bottom: solid 2px var(--color-gray-20);
+  border-bottom: solid 1px var(--color-gray-20);
 }
 
 .order-detail-items {
@@ -679,7 +694,7 @@ body {
 .order-footer-title {
   font-size: 24px;
   padding-bottom: 20px;
-  border-bottom: solid 2px var(--color-gray-20);
+  border-bottom: solid 1px var(--color-gray-20);
 }
 
 .order-footer-items {
@@ -698,6 +713,7 @@ body {
 
 .order-detail-close {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: center;
   padding: 10px;
@@ -1032,9 +1048,22 @@ body {
   align-items: center;
 }
 
+.wishlist-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  cursor: pointer;
+}
+
 .wishlist-icon {
   width: 27px;
+  width: 28px;
   height: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .wishlist-count {
@@ -1169,8 +1198,13 @@ body {
   object-fit: contain;
   overflow: hidden;
   background-color: var(--color-gray-20);
-  width: 200px;
-  height: 200px;
+  width: 282px;
+  height: 282px;
+}
+
+.card-cover.type-info-card-cover {
+  width: 210px;
+  height: 210px;
 }
 
 .card-cover-src {
