--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ textarea {
   display: block;
   width: 100%;
 }
+
+pre {
+  all: unset;
+}
+
 /* 스크롤바 커스텀 시작 */
 ::-webkit-scrollbar {
   width: 6px;
@@ -536,8 +541,8 @@ body {
 .main-coverstory {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  margin: 50px 0;
+  gap: 70px;
+  margin-bottom: 70px;
 }
 
 .main-contents-title {
@@ -1066,7 +1071,6 @@ body {
 .wishlist-count {
   color: var(--color-gray-30);
   font-weight: var(--fw-regular);
-  
 }
 
 .overview-contents {
@@ -1162,6 +1166,11 @@ body {
   align-items: center;
 }
 
+.coverstory-list-cover-src {
+  object-fit: cover;
+  max-width: none;
+}
+
 .coverstory-list-item {
   display: flex;
   flex-direction: column;
@@ -1175,7 +1184,7 @@ body {
 
 .coverstorylist-list-description {
   font-weight: var(--fw-regular);
-  line-height: 1.5rem;
+  line-height: 1.8rem;
 }
 
 /* @@@@@@@@@@@@@@@@@@@@ 마켓 목록 & 매거진 목록 @@@@@@@@@@@@@@@@@@@@ */
@@ -1592,6 +1601,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1.3rem;
+  margin-bottom: 50px;
 }
 
 .contents-header-line {
