--- a/src/index.css
+++ b/src/index.css
@@ -686,11 +686,11 @@ body {
   display: flex;
   width: 100%;
   gap: 10px;
-  padding: 10px 20px;
   border-bottom: solid 1px var(--color-gray-20);
 }
 
 .order-main-item-title {
+  padding: 10px;
   width: 130px;
   display: flex;
   align-items: center;
@@ -698,6 +698,7 @@ body {
 }
 
 .order-main-item-desc {
+  padding: 10px;
   display: flex;
   width: 100%;
   height: 116px;
@@ -983,6 +984,7 @@ body {
   flex-direction: column;
   gap: 70px;
   margin: 30px 0 50px 0;
+  padding-bottom: 20px;
   border-bottom: 1px solid var(--color-gray-30);
 }
 
@@ -1415,6 +1417,11 @@ body {
 
 .payment-form-inner.type_gray {
   color: var(--color-gray-30);
+}
+
+.payment-form-bottom {
+  display: flex;
+  margin-bottom: 40px;
 }
 
 /* @@@@@@@@@@@@@@@@@@@@ main @@@@@@@@@@@@@@@@@@@@ */
